--- a/src/template.html
+++ b/src/template.html
@@ -520,6 +520,6 @@
     
     <!-- <script src="./src/dist/js/main.js" type="module"></script> -->
     <!-- <script src="./dist/main.bundle.js" type="module"></script> -->
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
